--- a/manifest.json
+++ b/manifest.json
@@ -17,6 +17,7 @@
   "content_scripts":[
     {
       "matches":["https://github.com/*"],
+      "css":["src/license_alert.css"],
       "js":["src/jquery-3.2.0.min.js", "src/license_alert_contentscript.js"]
     }
   ],
