--- a/manifest.json
+++ b/manifest.json
@@ -4,12 +4,12 @@
   "description": "Adds license alert functionality",
   "version": "0.1",
   "icons": {
-    "16": "icon16.png",
-    "48": "icon48.png",
-    "128": "icon128.png"
+    "16": "icons/icon16.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
   },
   "page_action": {
-    "default_icon": "icon.png",
+    "default_icon": "icons/icon.png",
     "default_title": "License Alert for GitHub"
   },
   "background": {
