Alert moved to repository nav., Fixed #4, Tem. solution #5

--- a/manifest.json
+++ b/manifest.json
@@ -36,6 +36,7 @@
     "tabs",
     "storage",
     "webNavigation",
+    "notifications",
     "https://github.com/*",
     "https://api.github.com/*"
   ]
